--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 build
 .vscode
 out
+
+
+# latex
+*.aux
+*.log
+*.out
+*.toc
+*.fls
+*.fdb_latexmk
+*.synctex.gz
+*.bbl
+*.blg
+*.dvi
+*.lof
+*.lot
+*.nav
+*.snm
+*.vrb
+*.xdv
