--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,15 @@
-cmake_minimum_required(VERSION 3.10)
-project(MC970FinalProject)
+cmake_minimum_required(VERSION 3.18)
+project(FloydSteinbergHalftone LANGUAGES CXX CUDA)
 
-# C++ padrão
-set(CMAKE_CXX_STANDARD 17)
+# Configuração geral
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+find_package(OpenMP REQUIRED)
 
-# CUDA
-enable_language(CUDA)
-set(CMAKE_CUDA_STANDARD 17)
-set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Wno-c++17-extensions")
+# Executável Serial (compila apenas com C++)
+add_executable(floydsteinberg_serial serial.cpp)
+target_link_libraries(floydsteinberg_serial PRIVATE OpenMP::OpenMP_CXX)
 
-# OpenCV
-find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS})
-
-# ------------------------
-# Versão serial
-add_executable(serial src/serial.c)
-target_link_libraries(serial ${OpenCV_LIBS} m)
-
-# ------------------------
-# Versão CUDA (main + CUDA kernel)
-add_executable(cuda_dithering
-    # src/main.cpp
-    src/parallel.cu
-)
-target_link_libraries(cuda_dithering ${OpenCV_LIBS})
-set_target_properties(cuda_dithering PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+# Executável CUDA Paralelo
+add_executable(floydsteinberg_parallel cu.cu)
+target_link_libraries(floydsteinberg_parallel PRIVATE OpenMP::OpenMP_CXX)
