--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,16 @@ out
 logs
 venv
 .venv
-**venv**
+venv
+.env
+env
 **.venv**
-**env**
+**venv**
 **.env**
+**env**
 **__pycache__**
+wsnr_results.txt
+
 
 # latex
 *.aux
